--- a/Practica2_Fabiola.css
+++ b/Practica2_Fabiola.css
@@ -37,31 +37,12 @@ body {
 .menu a {
     color: var(--text-color);
     text-decoration: none;
-}
+    font-size: 1.2rem;
 
-/* Promoción */
-.promocion {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-
-.promo-img {
-    width: 100%;
-    height: auto;
-}
-
-.promo-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2rem;
-    font-weight: bold;
 }
 
 .arrow {
-    font-size: 2rem;
+    font-size: 6rem;
     color: white;
     position: absolute;
     top: 50%;
@@ -75,6 +56,12 @@ body {
 
 .right {
     right: 10px;
+}
+
+.promo-img {
+    width: 100%;      
+    height: auto;
+    max-width: 100%;
 }
 
 /* Sección de Productos */
@@ -96,6 +83,18 @@ body {
     padding: 1rem;
     margin: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.producto img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
+
+.recomendado img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 
 /* Redes Sociales */
@@ -120,7 +119,7 @@ body {
 }
 
 .map img {
-    width: 200px;
+    width: 100px;
     height: auto;
     border-radius: 10px;
 }
@@ -131,6 +130,9 @@ body {
 
 .person img {
     height: 150px;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 
 * {
@@ -235,7 +237,8 @@ nav a:hover {
 
 .product img {
     width: 100%;
-    height: 200px;
+    height: auto;
+    max-width: 100%;
     object-fit: cover;
 }
 
